--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-emoji": "^0.5.0",
+    "react-fontawesome": "^1.5.0",
+    "react-gravatar": "^2.6.1",
     "spectacle": "^2.0.0",
     "spectacle-code-slide": "^0.3.1",
     "spectacle-terminal": "^0.3.0"
@@ -45,7 +47,7 @@
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-react": "^6.4.1",
     "express": "^4.13.3",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.1",
     "html-loader": "^0.4.0",
     "is-buffer": "^1.1.1",
     "markdown-loader": "^0.1.7",
