--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-gravatar": "^2.6.1",
     "spectacle": "^2.0.0",
     "spectacle-code-slide": "^0.3.1",
-    "spectacle-terminal": "^0.3.0"
+    "spectacle-terminal": "^0.3.0",
+    "through2": "^2.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
