--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "nanobench": "^2.1.0",
     "normalize.css": "3.0.3",
     "react": "15.4.2",
     "react-dom": "15.4.2",
